@@ -43,8 +43,8 @@ class guSearchLyricEngine;
 
 #define guLYRIC_ENGINE_LYRICWIKI        0
 #define guLYRIC_ENGINE_LEOSLYRICS       1
-#define guLYRIC_ENGINE_LYRC_COM_AR      2
-#define guLYRIC_ENGINE_CDUNIVERSE       3
+//#define guLYRIC_ENGINE_LYRC_COM_AR      2
+#define guLYRIC_ENGINE_CDUNIVERSE       2
 
 // -------------------------------------------------------------------------------- //
 class guLyricsPanel : public wxPanel
@@ -119,15 +119,15 @@ class guLeosLyricsEngine : public guSearchLyricEngine
     virtual void SearchLyric( void );
 };
 
-// -------------------------------------------------------------------------------- //
-class guLyrcComArEngine : public guSearchLyricEngine
-{
-  public:
-    guLyrcComArEngine( guLyricsPanel * lyricspanel, const wxChar * artistname, const wxChar * trackname );
-    ~guLyrcComArEngine();
-
-    virtual void SearchLyric( void );
-};
+//// -------------------------------------------------------------------------------- //
+//class guLyrcComArEngine : public guSearchLyricEngine
+//{
+//  public:
+//    guLyrcComArEngine( guLyricsPanel * lyricspanel, const wxChar * artistname, const wxChar * trackname );
+//    ~guLyrcComArEngine();
+//
+//    virtual void SearchLyric( void );
+//};
 
 // -------------------------------------------------------------------------------- //
 class guCDUEngine : public guSearchLyricEngine
